k8s/flux/apps/aly-codes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aly-codes
  labels:
    app: aly-codes
spec:
  type: ClusterIP
  selector:
    app: aly-codes
  ports:
    - name: http
      port: 80
