k8s/flux/apps/aly-codes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aly-codes
  labels:
    app: aly-codes
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "aly.codes"
        - "www.aly.codes"
      secretName: aly-codes-tls
  rules:
    - host: "aly.codes"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aly-codes
                port:
                  number: 80
    - host: "www.aly.codes"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aly-codes
                port:
                  number: 80
